Clean up some more for JDK 17
Remove deprecated illegal-access=warn
Always use "--add-opens"
Remove "isJava8" from Ant-build
Use source=17 in Ant-build
Use JDK 17 as default in Jenkins jobs
Compile module files with JDK 17